--- a/src/views/index.html
+++ b/src/views/index.html
@@ -10,37 +10,37 @@
   </head>
   <body>
     <div class="landing-page">
-      <header>
-        <h1 class="landing-page__title">
-          Jared <span class="landing-page__title--spacer">Makes</span>
-        </h1>
-      </header>
-      <nav class="landing-page__nav">
-        <ul class="landing-page__nav__list">
-          <li class="landing-page__nav__list__item">
-            <a href="#" target="_blank">Web</a>
-          </li>
-          <li class="landing-page__nav__list__item">
-            <a href="#" target="_blank">Voice</a>
-          </li>
-          <li class="landing-page__nav__list__item">
-            <a href="#" target="_blank">Random</a>
-          </li>
-          <li class="landing-page__nav__list__item">
-            <a href="#" target="_blank">Contact</a>
-          </li>
-          <li class="landing-page__nav__list__item">
-            <a href="#" target="_blank">About</a>
-          </li>
-        </ul>
-      </nav>
-      <!-- <footer class="landing-page__footer">
-        <img
-          src="../images/tiger.png"
-          alt="jared makes logo"
-          class="landing-page__footer__image"
-        />
-      </footer> -->
+      <div class="landing-page__container">
+        <header>
+          <h1 class="landing-page__title">
+            Jared <span class="landing-page__title--spacer">Makes</span>
+          </h1>
+        </header>
+        <nav class="landing-page__nav">
+          <ul class="landing-page__nav__list">
+            <li class="landing-page__nav__list__item">
+              <a href="#" class="landing-page__link">Web</a>
+            </li>
+            <li class="landing-page__nav__list__item">
+              <a href="#" class="landing-page__link">Voice</a>
+            </li>
+            <li class="landing-page__nav__list__item">
+              <a href="#" class="landing-page__link">Random</a>
+            </li>
+            <li class="landing-page__nav__list__item">
+              <a href="#" class="landing-page__link">Contact</a>
+            </li>
+            <li class="landing-page__nav__list__item">
+              <a href="#" class="landing-page__link">About</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <img
+        src="../images/nyan-cat-clipart-3.gif"
+        alt="nyan-cat image"
+        class="landing-page__footer__image"
+      />
     </div>
     <script src="../javascripts/index.js"></script>
   </body>
