--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,11 +1,12 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Nova+Mono|Montserrat:300,400');
 
 $base-font-family: 'Montserrat', sans-serif;
+$landing-font-family: 'Nova Mono', monospace;
 
 // font-weight
 $fw-1: 300;
 $fw-2: 400;
-$fw-3: 900;
+// $fw-3: 900;
 
 // font-sizes
 $base-font-size: 1.6rem;
