basic nav complete

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,4 +5,4 @@
 @import 'base/typography';
 @import 'components/animations';
 @import 'base/general';
-@import 'pages/landing';
+@import 'components/nav';
