--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -1,14 +1,21 @@
 html {
   scroll-behavior: smooth;
-  // height: 100vh;
 }
 
 body {
   background: color(background);
-  // height: 100vh;
 }
 
 a {
   text-decoration: none;
-  color: accent;
+  color: color(secondary);
+}
+
+a:hover,
+a:active {
+  color: color(accent);
+}
+
+ul {
+  list-style: none;
 }
