--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,11 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Nova+Mono|Montserrat:300,400');
+@import url('https://fonts.googleapis.com/css?family=Space+Mono:400,700');
 
-$base-font-family: 'Montserrat', sans-serif;
-$landing-font-family: 'Nova Mono', monospace;
+$base-font-family: 'Space Mono', monospace;
 
 // font-weight
-$fw-1: 300;
-$fw-2: 400;
+$fw-1: 400;
+$fw-2: 700;
 // $fw-3: 900;
 
 // font-sizes
