--- a/src/styles/components/_animations.scss
+++ b/src/styles/components/_animations.scss
@@ -14,7 +14,7 @@
   }
 }
 
-// * use a keyframe * //
+// * keyframes * //
 @mixin glow($primaryColor, $secondaryColor, $accentColor: $white) {
   @keyframes glow {
     0%,
@@ -40,6 +40,18 @@
       text-shadow: 0 0 13px #fff, 0 0 16px #fff, 0 0 15px $accentColor,
         0 0 15px $accentColor, 0 0 16px $accentColor, 0 0 30px $accentColor,
         0 0 12px $accentColor;
+    }
+  }
+}
+
+@mixin fade-in {
+  @keyframes fade-in {
+    from {
+      opacity: 0;
+      filter: blur(25px);
+    }
+    to {
+      opacity: 1;
     }
   }
 }
