--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -4,12 +4,12 @@ $black: #000;
 $yellow: #e7e247;
 
 $palette: (
-  primary: #ef5d60,
-  secondary: #254441,
-  accent: #b2085d,
-  dark: #3b413c,
-  background: #fff,
-  base-font-color: #424242
+  primary: #27282e,
+  secondary: #8d7f7f,
+  accent: #ff6f00,
+  dark: #1d2546,
+  background: #fefffe,
+  base-font-color: #15171e
 );
 
 $greys: (
