--- a/src/views/landing.html
+++ b/src/views/landing.html
@@ -21,7 +21,52 @@
     </nav>
     <header class="header">
       <h1 class="header__title">Jared Makes</h1>
+      <div class="header__sub">
+        <p>Serverless Web Applications</p>
+        <p>Stylish And Modern Web Sites</p>
+        <p>Voice Applications For Alexa And Google Assistant</p>
+      </div>
     </header>
+    <section class="section__landing section__landing--lt section__voice">
+      <h2 class="section__landing__header">Jared Makes Voice Applications</h2>
+      <div class="section__landing__content">
+        <p>
+          With nearly
+          <a
+            href="https://voicebot.ai/2018/10/30/u-s-smart-speaker-users-rise-to-57-million/"
+            target="_blank"
+            >60 million</a
+          >
+          smart speakers installed in the United States, and with Voice tools
+          being installed on
+          <a
+            href="https://arstechnica.com/gadgets/2019/01/google-assistant-flexes-on-alexa-announces-1-billion-strong-install-base/"
+            target="_blank"
+            >over one billion</a
+          >
+          devices by the end of 2019, it seemed like a good idea to get some
+          experience building Voice applications. I've built everything from
+          some basic marketing tools, to a game to help kids learn to read, to a
+          demo for KFC. Hit the button below to check out my Voice Portfolio.
+        </p>
+      </div>
+      <a href="#" class="button">Voice Portfolio</a>
+    </section>
+    <section class="section__landing section__landing--dk section__web">
+      <h2 class="section__landing__header">Jared Makes Web Applications</h2>
+      <div class="section__landing__content">
+        <p>
+          I spent the better half of 2018 working in Voice, but I did ship out a
+          few web sites and web applications; including a full website overhaul
+          for a company that makes custom gun stocks for civil war era rifles,
+          and a tool for Advance Auto Parts to track store rankings across
+          several social media platforms. I plan on getting back to my web roots
+          in 2019, with a bigger focus on full stack development and some
+          frameworks. Hit the button below to check out my Web Portfolio.
+        </p>
+      </div>
+      <a href="#" class="button button--dk">Web Portfolio</a>
+    </section>
     <script src="../javascripts/index.js"></script>
   </body>
 </html>
