--- a/src/views/landing.html
+++ b/src/views/landing.html
@@ -21,6 +21,11 @@
     </nav>
     <header class="header">
       <h1 class="header__title">Jared Makes</h1>
+      <div class="header__sub">
+        <p>Serverless Web Applications</p>
+        <p>Stylish And Modern Web Sites</p>
+        <p>Voice Applications For Alexa And Google Assistant</p>
+      </div>
     </header>
     <script src="../javascripts/index.js"></script>
   </body>
