--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 @import 'utils/functions';
 @import 'base/typography';
 @import 'components/animations';
+@import 'components/reusables';
 @import 'base/general';
 @import 'components/nav';
 @import 'pages/landing';
