--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -7,7 +7,7 @@ $palette: (
   primary: #ef5d60,
   secondary: #254441,
   accent: #b2085d,
-  dark: #3b413c,
+  dark: #251b2b,
   background: #fff,
   base-font-color: #424242
 );
