--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -8,12 +8,13 @@ body {
 
 a {
   text-decoration: none;
-  color: color(secondary);
-}
+  color: color(primary);
+  transition: all 0.25s ease-in-out;
 
-a:hover,
-a:active {
-  color: color(accent);
+  &:hover,
+  &:active {
+    color: color(accent);
+  }
 }
 
 ul {
