--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -47,6 +47,17 @@
   }
 }
 
+@mixin backGrad($url: '') {
+  background: linear-gradient(
+      -45deg,
+      rgba(color(secondary), 0.9),
+      rgba(color(secondary), 0.8),
+      rgba(color(secondary), 0.7),
+      rgba(color(secondary), 0.6)
+    ),
+    url($url) fixed center/cover;
+}
+
 @mixin grid-span($number, $direction: row) {
   grid-#{$direction}: span $number;
 }
