--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -8,7 +8,7 @@ body {
 
 a {
   text-decoration: none;
-  color: color(primary);
+  color: color(secondary);
   transition: all 0.25s ease-in-out;
 
   &:hover,
