--- a/src/styles/components/_reusables.scss
+++ b/src/styles/components/_reusables.scss
@@ -12,8 +12,8 @@
   width: 200px;
 
   &:hover {
-    color: color(background);
-    background: black;
+    color: color(secondary);
+    background: $black;
   }
 
   &--dk {
@@ -22,7 +22,7 @@
     background: color(secondary);
 
     &:hover {
-      color: color(secondary);
+      color: color(accent);
       background: color(background);
     }
   }
