--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -50,10 +50,10 @@
 @mixin backGrad($url: '') {
   background: linear-gradient(
       -45deg,
-      rgba(color(secondary), 0.9),
-      rgba(color(secondary), 0.8),
-      rgba(color(secondary), 0.7),
-      rgba(color(secondary), 0.6)
+      rgba(color(primary), 0.9),
+      rgba(color(primary), 0.8),
+      rgba(color(primary), 0.7),
+      rgba(color(primary), 0.6)
     ),
     url($url) fixed center/cover;
 }
