--- a/src/views/landing.html
+++ b/src/views/landing.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="icon" sizes="16x16 32x32 64x64" href="../images/favicon.ico" />
     <link rel="stylesheet" href="../styles/main.scss" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
     <title>Jared Makes</title>
   </head>
   <body>
@@ -27,7 +30,7 @@
         <p>Voice Applications For Alexa And Google Assistant</p>
       </div>
     </header>
-    <section class="section__landing section__landing--lt section__voice">
+    <section class="section__landing section__landing--lt section__landing__voice">
       <h2 class="section__landing__header">Jared Makes Voice Applications</h2>
       <div class="section__landing__content">
         <p>
@@ -52,21 +55,82 @@
       </div>
       <a href="#" class="button">Voice Portfolio</a>
     </section>
-    <section class="section__landing section__landing--dk section__web">
+    <section class="section__landing section__landing--dk section__landing__web">
       <h2 class="section__landing__header">Jared Makes Web Applications</h2>
       <div class="section__landing__content">
         <p>
           I spent the better half of 2018 working in Voice, but I did ship out a
           few web sites and web applications; including a full website overhaul
-          for a company that makes custom gun stocks for civil war era rifles,
-          and a tool for Advance Auto Parts to track store rankings across
-          several social media platforms. I plan on getting back to my web roots
-          in 2019, with a bigger focus on full stack development and some
-          frameworks. Hit the button below to check out my Web Portfolio.
+          for a
+          <a href="https://gunstockwood.com" target="_blank">company</a> that
+          makes custom gun stocks for Civil War era rifles, and a tool for
+          Advance Auto Parts to track store rankings across several social media
+          platforms. I plan on getting back to my web roots in 2019, with a
+          bigger focus on full stack development and some frameworks. Hit the
+          button below to check out my Web Portfolio.
         </p>
       </div>
       <a href="#" class="button button--dk">Web Portfolio</a>
     </section>
+    <section class="section__landing section__landing--lt section__landing__other">
+      <h2 class="section__landing__header">Jared Makes Some Other Stuff</h2>
+      <div class="section__landing__content">
+        <p>
+          Like any good developer, I can't focus on just one thing, or five
+          things, or fifty things... Hit the button below to check out some of
+          my other stuff. You can see the gutter icons I made for Sublime Text
+          (just hit 500 downloads!), or check out some of my CSS art. I haven't
+          made too many things using CSS art (or even tried to learn how to do
+          it "right" yet), but I like what I've made; especially the magic
+          8-ball.
+        </p>
+      </div>
+      <a href="#" class="button">Other stuff</a>
+    </section>
+    <section class="section__landing section__landing--dk section__landing__about">
+      <h2 class="section__landing__header">
+        Jared Makes This Section About Himself
+      </h2>
+      <div class="section__landing__content">
+        <p>
+          <img src="../images/profile.jpg" alt="jared" class="section__landing__about__image">It would be pretty crazy if my last name were makes, but it's not. You
+          know what is crazy though? The fact that you've read this far and
+          still haven't checked out any of my cool stuff. I appreciate that you
+          want to know more. The short version is that I've been working retail
+          since 1996, and have had many successes including running some very
+          profitable businesses. But after 20 years this dude needed a break, so
+          now I make really cool things using the power of HTML, CSS, and
+          JavaScript. The first half of my career has been nothing less than
+          awesome, and I can not wait to see what I can do in this industry!
+        </p>
+      </div>
+    </section>
+        <footer class="footer">
+          <p>
+            Created By
+            <a href="#">Jared Truscott</a> &copy;<script>
+              document.write(new Date().getFullYear());
+            </script>
+            <ul class="footer__social-links">
+              <li>
+                <a href="http://github.com/trujared" target="_blank" rel="noopener noreferrer"><i
+                    class="fab fa-github-alt"></i></a>
+              </li>
+              <li>
+                <a href="http://codepen.io/jaredspens" target="_blank" rel="noopener noreferrer"><i
+                    class="fab fa-codepen"></i></a>
+              </li>
+              <li>
+                <a href="http://twitter.com/trujared" target="_blank" rel="noopener noreferrer"><i
+                    class="fab fa-twitter-square"></i></a>
+              </li>
+              <li>
+                <a href="http://instagram.com/trujared" target="_blank" rel="noopener noreferrer"><i
+                    class="fab fa-instagram"></i></a>
+              </li>
+            </ul>
+          </p>
+        </footer>
     <script src="../javascripts/index.js"></script>
   </body>
 </html>
