--- a/src/styles/components/_reusables.scss
+++ b/src/styles/components/_reusables.scss
@@ -1,28 +1,27 @@
 .button {
-  border: 2px solid $black;
-  color: $black;
+  border: 2px solid color(dark);
+  color: color(dark);
   text-transform: uppercase;
   padding: $spacer $spacer * 1.5;
   background: color(background);
   border-radius: 10px;
   margin: $spacer * 5;
   text-align: center;
-  align-self: center;
   transition: all 0.5s ease-in-out;
   width: 200px;
 
   &:hover {
-    color: color(secondary);
-    background: $black;
+    color: color(background);
+    background: color(dark);
   }
 
   &--dk {
     border: 2px solid color(background);
     color: color(background);
-    background: color(secondary);
+    background: color(dark);
 
     &:hover {
-      color: color(accent);
+      color: color(dark);
       background: color(background);
     }
   }
