--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,4 +7,5 @@
 @import 'components/reusables';
 @import 'base/general';
 @import 'components/nav';
+@import 'components/footer';
 @import 'pages/landing';
