--- a/src/views/landing.html
+++ b/src/views/landing.html
@@ -15,11 +15,11 @@
     <nav class="nav">
       <a href="./landing.html" class="nav__logo">Jared Makes</a>
       <ul class="nav__list">
-        <li class="nav__list__item"><a href="#">Web</a></li>
-        <li class="nav__list__item"><a href="#">Voice</a></li>
-        <li class="nav__list__item"><a href="#">Random</a></li>
-        <li class="nav__list__item"><a href="#">Contact</a></li>
-        <li class="nav__list__item"><a href="#">About</a></li>
+        <li class="nav__list__item"><a href="./web">Web</a></li>
+        <li class="nav__list__item"><a href="./voice">Voice</a></li>
+        <li class="nav__list__item"><a href="./random">Random</a></li>
+        <li class="nav__list__item"><a href="./contact">Contact</a></li>
+        <li class="nav__list__item"><a href="./about">About</a></li>
       </ul>
     </nav>
     <header class="header">
@@ -53,7 +53,7 @@
           demo for KFC. Hit the button below to check out my Voice Portfolio.
         </p>
       </div>
-      <a href="#" class="button">Voice Portfolio</a>
+    <a href="./voice" class="button">Voice<br>Portfolio</a>
     </section>
     <section class="section__landing section__landing--dk section__landing__web">
       <h2 class="section__landing__header">Jared Makes Web Applications</h2>
@@ -70,7 +70,7 @@
           button below to check out my Web Portfolio.
         </p>
       </div>
-      <a href="#" class="button button--dk">Web Portfolio</a>
+      <a href="./web" class="button button--dk">Web<br>Portfolio</a>
     </section>
     <section class="section__landing section__landing--lt section__landing__other">
       <h2 class="section__landing__header">Jared Makes Some Other Stuff</h2>
@@ -85,7 +85,7 @@
           8-ball.
         </p>
       </div>
-      <a href="#" class="button">Other stuff</a>
+      <a href="./random" class="button">Other<br>stuff</a>
     </section>
     <section class="section__landing section__landing--dk section__landing__about">
       <h2 class="section__landing__header">
