--- a/src/styles/components/_reusables.scss
+++ b/src/styles/components/_reusables.scss
@@ -2,13 +2,15 @@
   border: 2px solid color(dark);
   color: color(dark);
   text-transform: uppercase;
-  padding: $spacer $spacer * 1.5;
+  padding: 5px 5px;
   background: color(background);
   border-radius: 10px;
   margin: $spacer * 5;
   text-align: center;
   transition: all 0.5s ease-in-out;
   width: 200px;
+  font-size: 1.5rem;
+  line-height: 1.45;
 
   &:hover {
     color: color(background);
@@ -25,4 +27,9 @@
       background: color(background);
     }
   }
+}
+
+.wrapper {
+  max-width: 999px;
+  margin: 0 auto;
 }
