--- a/src/views/index.html
+++ b/src/views/index.html
@@ -13,18 +13,18 @@
   </head>
   <body>
     <nav class="nav">
-      <a href="./landing.html" class="nav__logo">Jared Makes</a>
+      <a href="./index.html" class="nav__logo current-page">Jared Makes</a>
       <ul class="nav__list">
-        <li class="nav__list__item"><a href="./web">Web</a></li>
-        <li class="nav__list__item"><a href="./voice">Voice</a></li>
-        <li class="nav__list__item"><a href="./random">Random</a></li>
-        <li class="nav__list__item"><a href="./contact">Contact</a></li>
-        <li class="nav__list__item"><a href="./about">About</a></li>
+        <li class="nav__list__item"><a href="./web.html">Web</a></li>
+        <li class="nav__list__item"><a href="./voice.html">Voice</a></li>
+        <li class="nav__list__item"><a href="./random.html">Random</a></li>
+        <li class="nav__list__item"><a href="./contact.html">Contact</a></li>
+        <li class="nav__list__item"><a href="./about.html">About</a></li>
       </ul>
     </nav>
-    <header class="header">
-      <h1 class="header__title">Jared Makes</h1>
-      <div class="header__sub">
+    <header class="header header__landing">
+      <h1 class="header__landing__title">Jared Makes</h1>
+      <div class="header__landing__sub">
         <p>Serverless Web Applications</p>
         <p>Stylish And Modern Web Sites</p>
         <p>Voice Applications For Alexa And Google Assistant</p>
@@ -53,7 +53,7 @@
           demo for KFC. Hit the button below to check out my Voice Portfolio.
         </p>
       </div>
-    <a href="./voice" class="button">Voice<br>Portfolio</a>
+    <a href="./voice.html" class="button">Voice<br>Portfolio</a>
     </section>
     <section class="section__landing section__landing--dk section__landing__web">
       <h2 class="section__landing__header">Jared Makes Web Applications</h2>
@@ -70,7 +70,7 @@
           button below to check out my Web Portfolio.
         </p>
       </div>
-      <a href="./web" class="button button--dk">Web<br>Portfolio</a>
+      <a href="./web.html" class="button button--dk">Web<br>Portfolio</a>
     </section>
     <section class="section__landing section__landing--lt section__landing__other">
       <h2 class="section__landing__header">Jared Makes Some Other Stuff</h2>
@@ -85,7 +85,7 @@
           8-ball.
         </p>
       </div>
-      <a href="./random" class="button">Other<br>stuff</a>
+      <a href="./random.html" class="button">Other<br>stuff</a>
     </section>
     <section class="section__landing section__landing--dk section__landing__about">
       <h2 class="section__landing__header">
@@ -134,3 +134,10 @@
     <script src="../javascripts/index.js"></script>
   </body>
 </html>
+
+<!-- todo make contactt page form-->
+<!-- todo style current page anchor class-->
+<!-- todo nav change color on scroll -->
+<!-- todo create cool mobile nav -->
+<!-- todo add seo stuff to head -->
+<!-- todo add cool link animation -->
