--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,4 +8,5 @@
 @import 'base/general';
 @import 'components/nav';
 @import 'components/footer';
-@import 'pages/landing';
+@import 'pages/index';
+@import 'pages/pages';
