--- a/src/styles/pages/_index.scss
+++ b/src/styles/pages/_index.scss
@@ -1,4 +1,4 @@
-.header {
+.header__landing {
   height: 100vh;
   background: linear-gradient(
       -45deg,
@@ -16,12 +16,6 @@
   &__title {
     margin-top: $spacer * 8;
     color: $white;
-    // background: linear-gradient(45deg, rgba(color(primary), 0.1), transparent);
-    // padding: 5px 20px;
-    // border-radius: 25px;
-
-    @include mq(xl) {
-    }
   }
 
   &__sub p {
@@ -77,7 +71,7 @@
 
     @include mq(lg) {
       @include backGrad('../images/logo.png');
-      background-size: contain;
+      background-size: auto;
       background-repeat: no-repeat;
     }
   }
